<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_constraint1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPageMain"
    tools:context="ro.diamondtech.myhousereply.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="329dp"
        android:layout_height="157dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        app:srcCompat="@drawable/myhomereplyicon3" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/user_app"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password_app"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="113dp"
        android:layout_height="38dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_login"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBox"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBox" />

    <CheckBox
        android:id="@+id/checkBoxReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:checked="false"
        android:duplicateParentState="false"
        android:text="@string/pref_remember_user_label"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLoginBox" />

    <Button
        android:id="@+id/buttonNewUser"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="113dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:enabled="false"
        android:text="@string/add_user"
        app:layout_constraintStart_toStartOf="@+id/imageViewNewBox"
        app:layout_constraintTop_toTopOf="@+id/imageViewNewBox" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:gravity="center_vertical"
        android:text="@string/forgot_pass"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNewBox" />

    <ImageView
        android:id="@+id/imageViewLoginBox"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass"
        app:srcCompat="@drawable/shape_rectangle_stroke" />

    <ImageView
        android:id="@+id/imageViewNewBox"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass"
        app:srcCompat="@drawable/shape_rectangle_stroke" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/message_demo"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp" />

</android.support.constraint.ConstraintLayout>